# contspy

./: .codecov.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup.cfg
.circleci/: config.yml
.github/workflows/: ci.yml
contspy/: __about__.py  __init__.py  arc_length_cont.py  cli.py  continuation.py  main.py  outputs.py  plotting.py  solvers.py  spectral.py  transient.py
test/: test_Alevizos_2016.py  test_S_curve.py  test_bratu.py  test_bratu_adaptive.py  test_bratu_out.csv  test_cli.py  test_coupled.py  test_solve.py  test_transient.py
