[metadata]
name = contspy
version = 0.0.4
author = Antoine B. Jacquey
author_email = ajacquey@mit.edu
description = Numerical continuation tools for partial differential equations using spectral elements method
url = https://github.com/ajacquey/contspy
project_urls =
  Code=https://github.com/ajacquey/contspy
  Issues=https://github.com/ajacquey/contspy/issues
  # "Documentation": "https://packaging.python.org/tutorials/distributing-packages/",
  # "Funding": "https://donate.pypi.org",
  # "Say Thanks!": "http://saythanks.io/to/example",
  # "Source": "https://github.com/pypa/sampleproject/",
  # "Tracker": "https://github.com/pypa/sampleproject/issues",
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
  numpy
  termcolor
  matplotlib
  importlib_metadata;python_version<"3.8"
python_requires = >=3.5
setup_requires =
  setuptools>=42
  wheel
  numpy
  termcolor
  matplotlib

[options.entry_points]
console_scripts =
  contspy-show = contspy.cli:show
